fixed full width title card overflow issue

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -171,7 +171,6 @@ address {
 
 .container-title-card {
 	min-height: 100vh;
-	width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
